@@ -49,7 +49,7 @@
         
             <const name="channelsPerDevice" value="4" />
         
-            <attribute name="_channels" type="uint32_t" shape="4" accessor="channels">
+            <attribute name="_channels" type="uint16_t" shape="4" accessor="channels">
             </attribute>
 
             <ctor>
@@ -116,10 +116,10 @@
             <attribute name="_frameNumber" type="uint32_t" accessor="frameNumber">
             </attribute>
 
-            <attribute name="_ticks" type="uint32_t" accessor="ticks">
+            <attribute name="_ticks" type="uint32_t">
             </attribute>
 
-            <attribute name="_fiducials" type="uint32_t" accessor="fiducials">
+            <attribute name="_fiducials" type="uint32_t">
             </attribute>
 
             <attribute name="_range" type="uint32_t" accessor="range">
