@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-28
+2013-05-22 Andy Salnikov
+- bug fix in imp.ddl.xml, Sample._channels is 16 bit instead of 32
+
 Tag: V00-04-27
 2013-05-15 Andy Salnikov
 - adding imp package
